[gd_scene load_steps=11 format=3 uid="uid://dyxumeknnbar3"]

[ext_resource type="Texture2D" uid="uid://6xec75gnikfa" path="res://assets/characters/All_Hands.png" id="1_12a3x"]
[ext_resource type="Script" path="res://prefabs/entities/all_character.gd" id="1_h2sn6"]
[ext_resource type="Texture2D" uid="uid://csfe5gl2dy18y" path="res://assets/characters/Cult_Heads.png" id="2_ka302"]
[ext_resource type="Texture2D" uid="uid://bcaynjkdimu7g" path="res://assets/characters/Hero_Heads.png" id="3_4sslf"]
[ext_resource type="Texture2D" uid="uid://bs2qgmbj5ftk1" path="res://assets/characters/Peon_Heads.png" id="4_ug4sn"]
[ext_resource type="Texture2D" uid="uid://dpm5743pmyen" path="res://assets/characters/All_Body.png" id="5_tllnm"]

[sub_resource type="Animation" id="Animation_3757p"]
resource_name = "Idle"
length = 4.0
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("All_Skeleton:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0436332, 0.0, -0.0436332, 0.0, -0.0436332, 0.0, 0.0436332, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("All_Skeleton:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.95, 1.05), Vector2(0.95, 1.1), Vector2(0.95, 1.05), Vector2(1, 1), Vector2(0.95, 1.05), Vector2(0.95, 1.1), Vector2(0.95, 1.05), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("All_Skeleton:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_1cy34"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("All_Skeleton:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("All_Skeleton:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("All_Skeleton:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_n7fi2"]
resource_name = "Walk"
length = 1.5
loop_mode = 1
step = 0.375
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("All_Skeleton:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.375, 0.75, 1.125, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.261799, 0.0, -0.261799, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("All_Skeleton:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.375, 0.75, 1.125, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0.95, 1.1), Vector2(1.1, 0.9), Vector2(0.95, 1.1), Vector2(1.1, 0.9), Vector2(0.95, 1.1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("All_Skeleton:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.375, 0.75, 1.125, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -5), Vector2(0, 0), Vector2(0, -5), Vector2(0, 0), Vector2(0, -5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_w2qnm"]
_data = {
"Idle": SubResource("Animation_3757p"),
"RESET": SubResource("Animation_1cy34"),
"Walk": SubResource("Animation_n7fi2")
}

[node name="All_Character" type="Node2D"]
script = ExtResource("1_h2sn6")

[node name="All_Skeleton" type="Node2D" parent="."]

[node name="AllHands" type="Sprite2D" parent="All_Skeleton"]
visible = false
position = Vector2(0, -11.975)
texture = ExtResource("1_12a3x")
vframes = 3

[node name="Heads" type="Node2D" parent="All_Skeleton"]

[node name="Cult_Heads" type="Sprite2D" parent="All_Skeleton/Heads"]
visible = false
position = Vector2(0, -26)
texture = ExtResource("2_ka302")
hframes = 3
vframes = 4

[node name="Hero_Heads" type="Sprite2D" parent="All_Skeleton/Heads"]
visible = false
position = Vector2(0, -26)
texture = ExtResource("3_4sslf")
hframes = 3
vframes = 4

[node name="Peon_Heads" type="Sprite2D" parent="All_Skeleton/Heads"]
visible = false
position = Vector2(0, -26)
texture = ExtResource("4_ug4sn")
hframes = 3
vframes = 4

[node name="AllBody" type="Sprite2D" parent="All_Skeleton"]
texture = ExtResource("5_tllnm")
hframes = 4
vframes = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_w2qnm")
}
